[b]Version 0.6.4[/b]:

(2008-09-26)
 * Added support for the new "pausing_keep_force" slave mode command prefix
   (added in mplayer r27665).
   This prefix really keeps the file paused after processing a slave command. 
   So now if you, for example, mute the audio when the video is paused it 
   won't advance one frame after it. It also keeps the video paused when you 
   take a screenshot (although you won't see the confirmation message until 
   playback resumes).
   There's also an option for smplayer.ini, use_pausing_keep_force. You can
   set to false if you find any trouble or prefer the old behaviour.

(2008-09-25)
 * Added the Galician translation, by Miguel Branco <mgl.branco@gmail.com>.


[b]Version 0.6.3[/b]:

(2008-09-24)
 * Added a new shortcut set (sda.keys) taken from 
   http://speeddemosarchive.com/forum/index.php/topic,7774.0.html, which you 
   can load in the shortcut editor in preferences.

(2008-09-23)
 * Added two icons for the mirror and flip actions (mirror.png and flip.png)
   taken from the Gimp.
 * Added a new option for smplayer.ini: default_size (section [gui]). It
   specifies the default size of the main window. Previously it was hardcoded
   (580x440).

(2008-09-22)
 * Now the subtitles can be mirrored, flipped or rotated along with the image.
   The way to enable it is not obvious though. You need to enable the option 
   "Include subtitles on screenshots" (Preferences->Subtitles).
 * (Linux) Tries to set "/dev/dvd" and "/dev/cdrom" (if they exist) as default 
   values for the dvd and cdrom devices.

(2008-09-21)
 * Added the new option Video->Mirror image. This option mirrors the image 
   on the Y axis.

(2008-09-20)
 * The comboboxes to select the video and audio driver in Preferences->
   General have changed. Now they are not editable, and only show some
   of the available drivers (png, jpeg... and so on are not shown). There's
   also an "User defined" option. If selected, a line edit will appear where